--- a/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/gulimall-auth-server-biz/src/main/resources/templates/login.html
@@ -33,6 +33,7 @@
         <div class="si_top">
             <p>
                 <span>谷粒商城不会以任何理由要求您转账汇款，谨防诈骗。</span>
+                <span th:if="${session.msg != null}" style="color: red"><br/>[[${session.msg}]]</span>
             </p>
         </div>
         <div class="si_cen">
@@ -60,8 +61,9 @@
             </div>
             <form action="/login" method="post">
                 <div style="color: red"
-                     [[${errors}]]
-                     th:text="${errors != null? (#maps.containsKey(errors,'msg') ? errors.msg:'') : ''}"></div>
+                     th:text="${errors != null? (#maps.containsKey(errors,'msg') ? errors.msg:'') : ''}">
+
+                </div>
 
                 <ul>
                     <li class="top_1">
