--- a/gulimall-product/gulimall-product-biz/src/main/resources/templates/index.html
+++ b/gulimall-product/gulimall-product-biz/src/main/resources/templates/index.html
@@ -100,13 +100,13 @@
                        th:text="${session.loginUser!=null ? '欢迎您,'+session.loginUser.username:'你好，请登录'}">你好，请登录
                     </a>
                 </li>
-                <li>
-                    <a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html" class="li_2">免费注册
+                <li th:if="${session.loginUser == null}" >
+                    <a  href="http://auth.gulimall.com/reg.html" class="li_2">免费注册
                     </a>
                 </li>
                 <span>|</span>
                 <li>
-                    <a href="#">我的订单</a>
+                    <a href="http://order.gulimall.com/list.html">我的订单</a>
                 </li>
 
 
