--- a/gulimall-product/gulimall-product-biz/src/main/resources/templates/item.html
+++ b/gulimall-product/gulimall-product-biz/src/main/resources/templates/item.html
@@ -58,16 +58,16 @@
                 </li>
             </ul>
             <ul class="header_ul_right">
-                <li style="border: 0;">
+                <li style="border: 0;width: 100px">
                     <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser == null }" class="aa">
                         你好，请登录</a>
                     <a href="http://auth.gulimall.com/login.html" class="aa"
                        th:if="${session.loginUser != null }"
                     >[[${session.loginUser.username}]]</a>
                 </li>
-                <li>
+                <li th:if="${session.loginUser == null }">
                     <a href="http://auth.gulimall.com/reg.html" style="color: red;"
-                       th:if="${session.loginUser == null }">免费注册
+                       >免费注册
                     </a> |
                 </li>
                 <li><a href="javascript:;" class="aa">我的订单</a> |</li>
