--- a/gulimall-order/gulimall-order-biz/src/main/resources/templates/confirm.html
+++ b/gulimall-order/gulimall-order-biz/src/main/resources/templates/confirm.html
@@ -78,7 +78,7 @@
         <ul class="header-right">
             <li>[[${session.loginUser == null ? '': session.loginUser.username}]]<img
                     src="/static/order/confirm/img/03.png"
-                               style="margin-bottom: 0px;margin-left3: 3px;"/><img
+                    style="margin-bottom: 0px;margin-left3: 3px;"/><img
                     src="/static/order/confirm/img/06.png"/></li>
             <li>|</li>
             <li class="spacer"></li>
@@ -597,8 +597,12 @@
     </div>
 
     <!--地址-->
-    <div class="top-3">
-        <p>家里</p><span>齐天大圣  北京市  昌平区城区晨曦小区-16号楼 吉利大学  150****2245</span>
+    <div class="top-3" th:each=" addr : ${orderConfirmData.getAddress()}">
+        <p th:text="${addr.getName()}">家里</p>
+        <span>
+            [[${addr.getName()}]] [[${addr.getProvince()}]] [[${addr.getCity()}]]  [[${addr.getDetailAddress()}]]
+            [[${addr.getPhone()}]]
+        </span>
     </div>
     <p class="p2">更多地址︾</p>
     <div class="hh1"/>
@@ -612,11 +616,11 @@
 </div>
 
 <!--地址-->
-<div class="top-5">
-    <p>北京昌平区</p><span>北京市  昌平区城区晨曦小区-16号楼 吉利大学  齐天大圣 150****2245</span><img
-        src="/static/order/confirm/img/09.png"/><span>距收货人0米</span>
-    <p class="p3">距离最近</p><span class="xiu">修改自提点</span>
-</div>
+<!--<div class="top-5">-->
+<!--    <p>北京昌平区</p><span>北京市  昌平区城区晨曦小区-16号楼 吉利大学  齐天大圣 150****2245</span><img-->
+<!--        src="/static/order/confirm/img/09.png"/><span>距收货人0米</span>-->
+<!--    <p class="p3">距离最近</p><span class="xiu">修改自提点</span>-->
+<!--</div>-->
 <div class="hh1"/>
 </div>
 
@@ -671,12 +675,16 @@
             <button>换购</button>
             <span>已购满20.00元，再加49.90元，可返回购物车领取赠品</span></div>
         <!--图片-->
-        <div class="yun1">
-            <img src="/static/order/confirm/img/im_03.png" class="yun"/>
+        <div class="yun1" th:each=" item :${orderConfirmData.getItems()}">
+            <img style="width: 50px; height: 70px;" th:src="${item.getImage()}" class="yun"/>
             <div class="mi">
-                <p>小米（MI）小米手环2 智能运动 心率检测 来 <span style="color: red;"> ￥ 149.00</span> <span> x1 </span> <span>有货</span>
+                <p>
+                    [[${item.getTitle()}]]
+                    <span style="color: red;"> ￥ [[${#numbers.formatDecimal(item.getPrice(),1,2)}]]</span>
+                    <span th:text="'x'+${item.getCount()}"> x1</span>
+                    <span >无货</span>
                 </p>
-                <p>电提醒 久坐提醒 LED显示器 时间显示 防水记 <span>0.095kg</span></p>
+                <p><span>0.095kg</span></p>
                 <p class="tui-1"><img src="/static/order/confirm/img/i_07.png"/>支持7天无理由退货</p>
             </div>
         </div>
@@ -714,8 +722,8 @@
 <div class="xia">
     <div class="qian">
         <p class="qian_y">
-            <span>1</span>
-            <span>件商品，总商品金额：</span>
+            <span th:text="${orderConfirmData.getTotalCount()}">1</span>
+            <span>件商品，总商品金额：[[${#numbers.formatDecimal(orderConfirmData.getTotal(),1,2)}]]</span>
             <span class="rmb">￥28.90</span>
         </p>
         <p class="qian_y">
@@ -738,7 +746,10 @@
     </div>
 
     <div class="yfze">
-        <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥28.90</span></p>
+        <p class="yfze_a">
+            <span class="z">应付总额：</span>
+            <span class="hq" >￥[[${#numbers.formatDecimal(orderConfirmData.getPayPrice(),1,2)}]]</span>
+        </p>
         <p class="yfze_b">寄送至： 北京 朝阳区 三环到四环之间 朝阳北路复兴国际大厦23层麦田房产 IT-中心研发二部 收货人：赵存权 188****5052</p>
     </div>
     <button class="tijiao">提交订单</button>
