--- a/gulimall-order/gulimall-order-biz/src/main/resources/templates/pay.html
+++ b/gulimall-order/gulimall-order-biz/src/main/resources/templates/pay.html
@@ -21,8 +21,9 @@
         <dl>
             <dt><img src="/static/order/pay/img/saoyisao.png" alt=""></dt>
             <dd>
-                <span>订单提交成功，请尽快付款！订单号：70715901829</span>
-                <span>应付金额<font>28.90</font>元</span>
+                <span >订单提交成功，请尽快付款！订单号：[[${submitOrderResp.getOrderSn()}]]</span>
+                <span>应付金额<font >[[${#numbers.formatDecimal(submitOrderResp.getPayAmount(),1,2)}]]</font>元
+                </span>
             </dd>
             <dd>
                 <span>推荐使用</span>
