--- a/gulimall-order/gulimall-order-biz/src/main/resources/templates/pay.html
+++ b/gulimall-order/gulimall-order-biz/src/main/resources/templates/pay.html
@@ -102,7 +102,9 @@
                 <img src="/static/order/pay/img/weixin.png" alt="">微信支付
             </li>
             <li>
-                <img src="/static/order/pay/img/zhifubao.png" style="weight:auto;height:30px;" alt="">支付宝
+                <a th:href="'http://order.gulimall.com/payOrder?orderSn='+${submitOrderResp.getOrderSn()}">
+                    <img src="/static/order/pay/img/zhifubao.png" style="weight:auto;height:30px;" alt="">支付宝
+                </a>
             </li>
         </ul>
     </div>
