调试支付功能

--- a/gulimall-member/gulimall-member-biz/src/main/resources/templates/orderList.html
+++ b/gulimall-member/gulimall-member-biz/src/main/resources/templates/orderList.html
@@ -215,7 +215,7 @@
                 </tr>
                 <tr class="tr" th:each="item,itemStat: ${order.itemEntities}">
                     <td colspan="3" style="border-right: 1px solid #ccc">
-                        <img style="width: 60px; height: 60px;" th:href="${item.skuPic}" alt=""
+                        <img style="width: 60px; height: 60px;" th:src="${item.skuPic}" alt=""
                              class="img">
                         <div>
                             <p style="width: 242px; height: auto ;overflow: auto">
@@ -402,7 +402,7 @@
             <ul>
                 <li style="display:block;">
                     <dl>
-                        <dt><img src="image/lunbo.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo.jpg" alt=""></dt>
                         <dd>
                             <div>花王 (Merries) 妙而舒 纸尿裤</div>
                             <div>大号 L54片 尿不湿（9-14千克）</div>
@@ -411,7 +411,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/lunbo1.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo1.jpg" alt=""></dt>
                         <dd>
                             <div>三只松鼠 肉干肉脯 休闲零食</div>
                             <div>猪肉脯自然片150g/袋子</div>
@@ -420,7 +420,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/lunbo2.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo2.jpg" alt=""></dt>
                         <dd>
                             <div>满减不止5折三只松鼠_小贱牛</div>
                             <div>板筋120gx1袋休闲零食特产</div>
@@ -429,7 +429,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/lunbo3.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo3.jpg" alt=""></dt>
                         <dd>
 
 
@@ -440,7 +440,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/lunbo4.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo4.jpg" alt=""></dt>
                         <dd>
                             <div>欧莱雅（LOREAL）男士控油</div>
                             <div>（男士洗面奶 收缩毛孔 去黑头）</div>
@@ -452,7 +452,7 @@
                 </li>
                 <li>
                     <dl>
-                        <dt><img src="image/live.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/live.jpg" alt=""></dt>
                         <dd>
                             <div>花王 (Merries) 妙而舒 纸尿裤</div>
                             <div>大号 L54片 尿不湿（9-14千克）</div>
@@ -461,7 +461,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/live1.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/live1.jpg" alt=""></dt>
                         <dd>
                             <div>三只松鼠 肉干肉脯 休闲零食</div>
                             <div>猪肉脯自然片150g/袋子</div>
@@ -470,7 +470,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/live2.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/live2.jpg" alt=""></dt>
                         <dd>
                             <div>满减不止5折三只松鼠_小贱牛</div>
                             <div>板筋120gx1袋休闲零食特产</div>
@@ -479,7 +479,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/live3.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/live3.jpg" alt=""></dt>
                         <dd>
 
 
@@ -490,7 +490,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/live4.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/live4.jpg" alt=""></dt>
                         <dd>
                             <div>欧莱雅（LOREAL）男士控油</div>
                             <div>（男士洗面奶 收缩毛孔 去黑头）</div>
@@ -502,7 +502,7 @@
                 </li>
                 <li>
                     <dl>
-                        <dt><img src="image/lunbo5.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo5.jpg" alt=""></dt>
                         <dd>
                             <div>花王 (Merries) 妙而舒 纸尿裤</div>
                             <div>大号 L54片 尿不湿（9-14千克）</div>
@@ -511,7 +511,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt><img src="image/lunbo6.jpg" alt=""></dt>
+                        <dt><img href="/static/member/image/lunbo6.jpg" alt=""></dt>
                         <dd>
                             <div>三只松鼠 肉干肉脯 休闲零食</div>
                             <div>猪肉脯自然片150g/袋子</div>
