修改代码生成器模板

--- a/renren-generator/src/main/resources/template/Mapper.java.vm
+++ b/renren-generator/src/main/resources/template/Mapper.java.vm
@@ -6,12 +6,11 @@ import org.apache.ibatis.annotations.Mapper;
 
 /**
  * ${comments}
- * 
+ *
  * @author ${author}
- * @email ${email}
  * @date ${datetime}
  */
 @Mapper
-public interface ${className}Dao extends BaseMapper<${className}Entity> {
-	
+public interface ${className}Mapper extends BaseMapper<${className}Entity> {
+
 }
