--- a/renren-generator/src/main/resources/views/main.html
+++ b/renren-generator/src/main/resources/views/main.html
@@ -24,6 +24,12 @@
             <li>普通群：145799952(学习交流，互相解答各种疑问)</li>
         </ul>
     </div>
+    <div style="color: red; font-size: 18px;padding: 10px 0 20px 10px;">
+        <ul>
+            <li>1. application.yml 修改对应的数据库配置</li>
+            <li>2. generator.properties [mainPath,package,moduleName,author,tablePrefix]</li>
+        </ul>
+    </div>
 </div>
 </body>
 </html>
