--- a/renren-generator/src/main/resources/template/Controller.java.vm
+++ b/renren-generator/src/main/resources/template/Controller.java.vm
@@ -1,89 +1,69 @@
 package ${package}.${moduleName}.controller;
 
-import java.util.Arrays;
-import java.util.Map;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
-
+import com.baomidou.mybatisplus.core.metadata.IPage;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import ${package}.${moduleName}.entity.${className}Entity;
 import ${package}.${moduleName}.service.${className}Service;
-import ${mainPath}.common.utils.PageUtils;
-import ${mainPath}.common.utils.R;
+import com.yanlaoge.mall.common.core.result.Result;
+import com.yanlaoge.mall.common.web.base.BaseController;
+import io.swagger.annotations.Api;
+import io.swagger.annotations.ApiImplicitParam;
+import io.swagger.annotations.ApiOperation;
+import org.springframework.web.bind.annotation.*;
 
-
+import javax.annotation.Resource;
+import java.util.List;
 
 /**
  * ${comments}
  *
  * @author ${author}
- * @email ${email}
  * @date ${datetime}
  */
+@Api(tags = "${comments}管理接口-ruby")
 @RestController
-@RequestMapping("${moduleName}/${pathName}")
-public class ${className}Controller {
-    @Autowired
+@RequestMapping("/${pathName}")
+public class ${className}Controller extends BaseController {
+    @Resource
     private ${className}Service ${classname}Service;
 
-    /**
-     * 列表
-     */
-    @RequestMapping("/list")
-    //@RequiresPermissions("${moduleName}:${pathName}:list")
-    public R list(@RequestParam Map<String, Object> params){
-        PageUtils page = ${classname}Service.queryPage(params);
-
-        return R.ok().put("page", page);
+    @ApiOperation("${comments}分页")
+    @PostMapping("/page")
+    public Result<IPage<${className}Entity>> page(@RequestBody Page<${className}Entity> page) {
+        return ok(${classname}Service.page(page));
     }
 
-
-    /**
-     * 信息
-     */
-    @RequestMapping("/info/{${pk.attrname}}")
-    //@RequiresPermissions("${moduleName}:${pathName}:info")
-    public R info(@PathVariable("${pk.attrname}") ${pk.attrType} ${pk.attrname}){
-		${className}Entity ${classname} = ${classname}Service.getById(${pk.attrname});
-
-        return R.ok().put("${classname}", ${classname});
+    @ApiOperation("${comments}列表")
+    @GetMapping("/list")
+    public Result<List<${className}Entity>> list() {
+        return ok(${classname}Service.list());
     }
 
-    /**
-     * 保存
-     */
-    @RequestMapping("/save")
-    //@RequiresPermissions("${moduleName}:${pathName}:save")
-    public R save(@RequestBody ${className}Entity ${classname}){
-		${classname}Service.save(${classname});
-
-        return R.ok();
+    @ApiOperation("${comments}详情")
+    @GetMapping("/info/{id}")
+    @ApiImplicitParam(name = "id", value = "${comments}id", paramType = "path", dataType = "Long")
+    public Result<${className}Entity> detail(@PathVariable Integer id) {
+        return ok(${classname}Service.getById(id));
     }
 
-    /**
-     * 修改
-     */
-    @RequestMapping("/update")
-    //@RequiresPermissions("${moduleName}:${pathName}:update")
-    public R update(@RequestBody ${className}Entity ${classname}){
-		${classname}Service.updateById(${classname});
-
-        return R.ok();
+    @ApiOperation("新增${comments}")
+    @PostMapping("/save")
+    public Result<Boolean> add(@RequestBody ${className}Entity form) {
+        return ok(${classname}Service.save(form));
     }
 
-    /**
-     * 删除
-     */
-    @RequestMapping("/delete")
-    //@RequiresPermissions("${moduleName}:${pathName}:delete")
-    public R delete(@RequestBody ${pk.attrType}[] ${pk.attrname}s){
-		${classname}Service.removeByIds(Arrays.asList(${pk.attrname}s));
+    @ApiOperation("修改${comments}")
+    @PostMapping("/update")
+    public Result<Boolean> update(@RequestBody ${className}Entity form) {
+        return ok(${classname}Service.updateById(form));
+    }
 
-        return R.ok();
+    @ApiOperation("删除${comments}")
+    @PostMapping("/delete/{id}")
+    @ApiImplicitParam(name = "id", value = "${comments}id", paramType = "path", dataType = "Long")
+    public Result<Boolean> delete(@PathVariable("id") Long id) {
+        return ok(${classname}Service.removeById(id));
     }
 
 }
