--- a/renren-generator/src/main/resources/template/Entity.java.vm
+++ b/renren-generator/src/main/resources/template/Entity.java.vm
@@ -1,35 +1,38 @@
 package ${package}.${moduleName}.entity;
 
+import com.baomidou.mybatisplus.annotation.IdType;
 import com.baomidou.mybatisplus.annotation.TableId;
 import com.baomidou.mybatisplus.annotation.TableName;
+import com.yanlaoge.mall.common.web.base.BaseEntity;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+
+import java.util.Date;
 
 #if(${hasBigDecimal})
 import java.math.BigDecimal;
 #end
-import java.io.Serializable;
-import java.util.Date;
-import lombok.Data;
 
 /**
  * ${comments}
- * 
+ *
  * @author ${author}
- * @email ${email}
  * @date ${datetime}
  */
 @Data
 @TableName("${tableName}")
-public class ${className}Entity implements Serializable {
-	private static final long serialVersionUID = 1L;
-
-#foreach ($column in $columns)
-	/**
-	 * $column.comments
-	 */
-	#if($column.columnName == $pk.columnName)
-@TableId
-	#end
+@ApiModel("${comments}")
+@EqualsAndHashCode(callSuper = true)
+public class ${className}Entity extends BaseEntity {
+    #foreach ($column in $columns)
+@ApiModelProperty("$column.comments")
+    #if($column.columnName == $pk.columnName)
+@TableId(type = IdType.AUTO)
+    #end
 private $column.attrType $column.attrname;
-#end
+
+    #end
 
 }
